@@ -3,5 +3,13 @@
   :url "http://github.com/SupermanScott/ratis"
   :license {:name "Eclipse Public License"
             :url "http://www.eclipse.org/legal/epl-v10.html"}
-  :dependencies [[org.clojure/clojure "1.5.0"]]
-  :main ratis.core)
+  :dependencies [[org.clojure/clojure "1.5.0"]
+                 [org.clojure/tools.logging "0.2.6"]]
+  :jvm-opts ["-server" "-XX:+UseConcMarkSweepGC" "-Xmx4g"]
+  :test-selectors {:default #(not (some #{:benchmark :redis}
+                                        (cons (:tag %) (keys %))))
+                   :integration :redis
+                   :benchmark :benchmark
+                   :all (constantly true)}
+  :main ratis.core
+  :warn-on-reflection true)
